--- a/war/css/form.css
+++ b/war/css/form.css
@@ -1,4 +1,10 @@
 /* Clean Form CSS */
+
+ul.errors {
+	list-style: none;
+	color: red;
+	font-size: 16px;
+}
 .standard-form {
     margin-left:auto;
     margin-right:auto;
