--- a/war/css/edit-info.css
+++ b/war/css/edit-info.css
@@ -1,52 +1,44 @@
-#profile
-{
-font-weight: normal;
-font-size: 150%;
-color:black;
+#profile {
+	font-weight: normal;
+	font-size: 150%;
+	color: black;
 }
 
-#name
-{
-color:black;
-font-size: 1.5em;
+#name {
+	color: black;
+	font-size: 1.5em;
 }
 
-#content
-{
-font-family: "PT Sans", sans-serif;
-font-size: 13px;
-color: #6b6b6b;
-font-weight: bold;
+#content {
+	font-family: "PT Sans", sans-serif;
+	font-size: 13px;
+	color: #6b6b6b;
+	font-weight: bold;
 }
 
-#image
-{
-float:left;
+#image {
+	float: left;
 }
 
-#name-form
-{
-margin-left:150px;
+#name-form {
+	margin-left: 150px;
 }
 
-#contact
-{
-color:black;
-font-size: 16px;
+#contact {
+	color: black;
+	font-size: 16px;
 }
 
-#contact-form
-{
-float:left;
+#contact-form {
+	float: left;
 }
 
-#contact-form2
-{
-margin-left:325px;
+#contact-form2 {
+	margin-left: 325px;
 }
 
 #contact-form3 {
-
+	
 }
 
 div.section {
@@ -65,6 +57,6 @@ h1.heading {
 #contact-form3 .separator {
 	float: none;
 	display: inline;
-	margin-right: -14px;
-	margin-left: -20px;
+	margin-right: -7px;
+	margin-left: -14px;
 }
