Did my scrumy stuff, refactored some code, helped ryan out a bit

--- a/war/css/user.css
+++ b/war/css/user.css
@@ -51,3 +51,8 @@ div.name-heading {
 	margin-left: 20px;
 	color: grey;
 }
+
+div.notFound {
+	float: none !important;
+	margin: auto !important;
+}
