--- a/war/css/course.css
+++ b/war/css/course.css
@@ -126,3 +126,28 @@ margin-right: -15px !important;
 label.last {
 	width:230%;
 }
+
+.standard-form select[name="course"] {
+	display:inline;
+}
+
+.standard-form div.inline {
+	display:inline;
+	margin-left: 25px;
+}
+
+select.prof {
+	width: 230px;
+}
+
+form.no-border {
+	margin-top: -15px;
+	border-top-left-radius: 0px;
+	border-top-right-radius: 0px;
+}
+
+div.not-found {
+	text-align: center;
+	font-size: 16px;
+	font-weight: bold;	
+}
