--- a/war/css/edit-info.css
+++ b/war/css/edit-info.css
@@ -24,9 +24,10 @@
 }
 
 #image input[type="file"] {
-	width: 90px;
+	width: 105px;
 	font-size: 16px;
-	margin-left: 20px;
+	margin-left: 10px;
+	color: white;
 }
 
 #image img {
