--- a/war/css/form.css
+++ b/war/css/form.css
@@ -3,7 +3,10 @@
 ul.errors {
 	list-style: none;
 	color: red;
-	font-size: 16px;
+	text-align: center;
+	font-size: 20px;
+	margin-bottom: 10px;
+	margin-top: -15px;
 }
 .standard-form {
     margin-left:auto;
@@ -51,6 +54,7 @@ ul.errors {
 }
 
 .standard-form input[type="text"],
+.standard-form textarea,
 .standard-form input[type="email"],
 .standard-form select, 
 .assign-table input[type=textbox]{
@@ -70,7 +74,7 @@ ul.errors {
     box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
     -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
 }
-.standard-form input:focus, .standard-form select:focus, .standard-form .submit input[type=button]:focus, .assign-table input[type=textbox]:focus { 
+.standard-form input:focus, .standard-form textarea:focus, .standard-form select:focus, .standard-form .submit input[type=button]:focus, .assign-table input[type=textbox]:focus { 
 	outline: none; 
 	border-color: #4D90FE; 
 	box-shadow: 0 0 3px #4D90FE; 
